--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,9 +1,7 @@
 name: Build and Publish Chatwoot Image
-
 on:
   push:
     branches: [ "main" ]
-
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
@@ -17,13 +15,10 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: List files in deployment directory
-        run: ls -la deployment
-
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./deployment/dockerhub/Dockerfile-ce
+          file: ./Dockerfile.fazer
           push: true
           tags: douzidigital/chatwoot-custom:latest
