--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -8,21 +8,21 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     steps:
-      # 1. Baixa o código do seu repositório
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2. Faz o login no Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.D-USERNAME }}
+          password: ${{ secrets.D-TOKEN }}
 
-      # 3. Constrói a imagem usando o comando direto
+      # PASSO DE DEPURAÇÃO ADICIONADO AQUI
+      - name: List all files recursively
+        run: ls -R
+
       - name: Build the Docker image
         run: docker build . --file Dockerfile.fazer --tag douzidigital/chatwoot-custom:latest
 
-      # 4. Envia a imagem para o Docker Hub
       - name: Push the Docker image
         run: docker push douzidigital/chatwoot-custom:latest
